--- a/stock-market/src/app/stock/stock-item/stock-item.component.html
+++ b/stock-market/src/app/stock/stock-item/stock-item.component.html
@@ -1,7 +1,7 @@
 <div class="stock-container">
   <div class="name"><h3>{{stock.name}}</h3> - <h4>{{stock.code}}</h4></div>
   <div class="price"
-       [ngClass]="stockClasses">${{stock.price}}</div>
+       [ngStyle]="stockStyles">${{stock.price}}</div>
   <button (click)="toggleFavorite($event)"
           [disabled]="stock.favorite">Add to Favorite</button>
 </div>
